--- a/css/main.css
+++ b/css/main.css
@@ -86,27 +86,68 @@ textarea {
 /* ==========================================================================
    Author's custom styles
    ========================================================================== */
-/*==============================
-Header - Footer styles
- ===============================*/
 
-/*-----------Header--------------*/
-header {
-  
-  display: flex;
-  justify-content: center;
+/*===========================================================================
+Mobile
+============================================================================= */
+
+/*----------Global Styles----------*/
+
+
+body {
+  font-size: 1em;
+  color: #e2e3ed;
 }
 
-header content-wrapper {
+.content-wrapper {
+  width: 60%;
+}
+
+/*===========================================================================
+                          Header - Footer styles
+ ============================================================================ */
+
+/*-----------Header--------------*/
+
+header {
+  display: flex;
+  justify-content: center;
+
+}
+
+header .content-wrapper {
   display: flex;
   justify-content: center;
   align-items: center;
   flex-flow: row wrap;
+  background: #202322;
+}
+
+header img {
+  width: 60%;
+  padding: 15px 120px 10px;
+}
+
+h1 {
+  font-family: 'Roboto', sans-serif;
+  font-size: 36px;
+  line-height: 43px;
+  font-weight: 500;
+  padding-left: 5%;
+}
+
+.header-divider {
+  width: 60%;
 }
 
 header nav ul {
+  font-size: 18px;
+  font-weight: bold;
   display: flex;
   justify-content: space-around;
+  width: 60%;
+  padding: 20px 0 15px;
+
 }
 
 /*----------Footer----------*/
@@ -116,12 +157,22 @@ footer {
   flex-direction: column;
   align-items: center;
   text-align: center;
+
+}
+
+footer .content-wrapper {
+  display: flex;
+  justify-content: center;
+  width: 60%;
+  padding: 50px 0;
+  background: #202322;
 }
 
 .social-icons {
   display: flex;
   justify-content: center;
 }
+
 /*===============================
 Main Homepage
 =================================*/
@@ -130,30 +181,107 @@ Main Homepage
 .hero-area {
   display: flex;
   justify-content: center;
+
+}
+
+.hero-area .content-wrapper {
+  background-image: url("../img/unplugged-retreat.jpg");
+  background-position: center;
+  background-repeat: no-repeat;
+  height: 500px;
+  background-size: cover;
+  padding: 50px 0;
 }
 
 /*----------Aside----------*/
 
 aside {
-  border: 1px dashed red;
   display: flex;
   justify-content: center;
+
+}
+
+aside .content-wrapper {
+  padding: 50px 0;
+  background: #527158;
+
+}
+
+.form {
+  display: flex;
+  flex-direction: column;
+  padding: 0 5%;
+  gap: 40px;
+}
+
+.form h3{
+  font-family: 'Poppins', sans-serif;
+  font-size: 18px;
+  font-weight: 500;
+}
+
+.form-description {
+  padding-left: 5%;
+}
+
+.form-description h3 {
+  font-family: 'Poppins', sans-serif;
+  font-size: 18px;
+  font-weight: 500;
+}
+
+input {
+  font-size: 18px;
+  font-weight: 500;
+  color: #2a423a;
+  padding: 20px;
+
+}
+
+input[type=text] {
+  font-family: 'Poppins', sans-serif;
+
+}
+
+input[type=button] {
+  font-family: 'Poppins', sans-serif;
+  background: #2a423a;
+  color: #e2e3ed;
 }
 
 /*----------Features----------*/
 .features {
-  border: 2px solid purple;
   display: flex;
   justify-content: center;
 }
 
+.features h2 {
+  padding-left: 5%;
+}
+
 .features-items {
-  border: 1px solid green;
   display: flex;
   justify-content: center;
   flex-flow: row wrap;
   flex-direction: column;
   align-items: center;
+}
+
+.features-items-descriptions p {
+  display: flex;
+  justify-content: center;
+  font-family: 'Open Sans', sans-serif;
+  font-size: 14px;
+  line-height: 18px;
+
+}
+
+.features .content-wrapper {
+  background-image: url("../img/unplugged-retreat-features.jpg");
+  background-position: center;
+  background-repeat: no-repeat;
+  height: 500px;
+  background-size: cover;
 }
 
 /*----------Reviews----------*/
@@ -163,39 +291,40 @@ aside {
 }
 
 .reviews .content-wrapper {
-  border: 1px dashed pink;
   display: flex;
-  justify-content: center;
   flex-flow: row wrap;
-}
-/*===================================
-About Styles
-====================================*/
+  background: #2a423a;
+  padding: 50px 0;
 
-/*----------Mission----------*/
-
-.mission{
-  display: flex;
-  justify-content: center;
 }
 
-/*----------Contact-section----------*/
-
-.contact-section{
-  display: flex;
-  justify-content: center;
+.reviews h2 {
+  padding: 0 5%;
+  line-height: 30px;
 }
-/*====================================
-FAQ Styles
-======================================*/
 
-.faq {
-  display: flex;
-  justify-content: center;
+.reviews img {
+  width: 90%;
+  height: 500px;
+  background-position: center;
+  padding: 5%;
+
+}
+
+.reviews article {
+  padding: 0 5%;
+  width: 60%;
+}
+
+.reviews article h3 {
+  font-family: 'Poppins', sans-serif;
+  font-size: 18px;
+  font-weight: 500;
+  padding: 20px 0;
 }
 
 /*===========================================================================
-About Page
+About Page Styles
 ============================================================================*/
 
 /*----------Mission----------*/
@@ -203,15 +332,17 @@ About Page
 .mission {
   display: flex;
   justify-content: center;
+  background: #527158;
 }
 
 .contact-section {
   display: flex;
   justify-content: center;
+  background: #2a423a;
 }
 
 /*============================================================================
-FAQ
+FAQ Page Styles
 =============================================================================*/
 
 /*----------FAQ----------*/
@@ -219,6 +350,7 @@ FAQ
 .faq {
   display: flex;
   justify-content: center;
+  background: #527158;
 }
 
 .faq .content-wrapper {
@@ -226,6 +358,17 @@ FAQ
   justify-content: center;
   align-items: center;
   flex-flow: row wrap;
+}
+
+.faq h2 {
+  line-height: 30px;
+}
+
+.faq-content h4 {
+  line-height: 24px;
+  font-family: 'Poppins', sans-serif;
+  font-size: 18px;
+  font-weight: 500;
 }
 
 /* ==========================================================================
