--- a/css/main.css
+++ b/css/main.css
@@ -140,14 +140,25 @@ h1 {
   width: 60%;
 }
 
+header nav {
+  width: 60%;
+  justify-content: center;
+}
+
 header nav ul {
   font-size: 18px;
   font-weight: bold;
   display: flex;
   justify-content: space-around;
-  width: 60%;
   padding: 20px 0 15px;
+  margin: 0;
+  list-style: none;
 
+}
+
+header nav ul a {
+  color: #e2e3ed;
+  text-decoration: none;
 }
 
 /*----------Footer----------*/
@@ -170,8 +181,9 @@ footer .content-wrapper {
 
 /*----------Contact Section----------*/
 
-.contact h4{
-  font-family: 'Poppins', sans-serif;;
+.contact h4 {
+  font-family: 'Poppins', sans-serif;
+  ;
   font-size: 18px;
   font-weight: 500;
 }
@@ -193,7 +205,7 @@ footer .content-wrapper {
   font-family: 'Open Sans', sans-serif;
   font-size: 14px;
   padding: 20px 0;
-    }
+}
 
 /*===============================
 Main Homepage
@@ -229,14 +241,13 @@ aside p {
   font-size: 14px;
 }
 
+/*----------Form----------*/
+
 .form {
   display: flex;
   flex-direction: column;
   gap: 40px;
 }
-
-
-/*----------Form----------*/
 
 .form h3 {
   font-family: 'Poppins', sans-serif;
@@ -254,6 +265,9 @@ aside p {
   font-size: 18px;
   font-weight: 500;
 }
+
+
+/*----------Input----------*/
 
 input[type=text] {
   font-family: 'Poppins', sans-serif;
@@ -283,6 +297,7 @@ input[type=button] {
   background-position: center;
   background-repeat: no-repeat;
   background-size: cover;
+  padding: 50px 0
 }
 
 .features h2 {
@@ -300,9 +315,12 @@ input[type=button] {
   align-items: center;
 }
 
-.features p {
+
+
+.features article {
   display: flex;
   justify-content: center;
+  text-align: center;
   font-family: 'Open Sans', sans-serif;
   font-size: 14px;
   line-height: 18px;
@@ -347,7 +365,7 @@ input[type=button] {
 }
 
 .reviews article p {
-  font-family: 'Open Sans', sans-serif ;
+  font-family: 'Open Sans', sans-serif;
   font-size: 14px;
   padding-left: 5px;
 }
