--- a/css/main.css
+++ b/css/main.css
@@ -273,8 +273,7 @@ aside p {
 .form {
   display: flex;
   flex-direction: column;
-  gap: 40px;
-
+ 
 }
 
 .form h3 {
@@ -306,7 +305,8 @@ input[type=text] {
   font-weight: 500;
   color: #2a423a;
   padding: 20px;
-  margin: 0 5px;
+  margin-left: 5px;
+  margin-bottom: 20px;
 
 }
 
@@ -338,6 +338,7 @@ input[type=button] {
   font-size: 30px;
   font-weight: 500;
   padding-left: 5px;
+  padding-bottom: 60px;
 
 }
 
@@ -403,7 +404,7 @@ input[type=button] {
   font-family: 'Poppins', sans-serif;
   font-size: 18px;
   font-weight: 500;
-  padding: 20px 5px;
+  padding-left: 5px;
 
 }
 
@@ -425,6 +426,7 @@ About Page Styles
   display: flex;
   justify-content: center;
   background: #527158;
+  padding: 50px 0;
 
 }
 
@@ -448,7 +450,7 @@ About Page Styles
   display: flex;
   justify-content: center;
   background: #2a423a;
-
+  padding: 40px 0;
 }
 
 .contact-section h2 {
@@ -473,7 +475,7 @@ FAQ Page Styles
   display: flex;
   justify-content: center;
   background: #527158;
-  padding: 50px 0;
+  padding-top: 50px;
   margin: 0;
 
 }
@@ -490,6 +492,8 @@ FAQ Page Styles
   font-family: 'Poppins', sans-serif;
   font-size: 30px;
   font-weight: 500;
+  padding-bottom: 40px;
+  margin: 0;
 
 }
 
@@ -497,6 +501,7 @@ FAQ Page Styles
   font-family: 'Poppins', sans-serif;
   font-size: 18px;
   line-height: 24px;
+  margin: 0
 
 }
 
@@ -504,6 +509,7 @@ FAQ Page Styles
   font-family: 'Open Sans', sans-serif;
   font-size: 14px;
   line-height: 18px;
+  padding-bottom: 50px;
 
 }
 
